  [Michele Simionato]
  * Removed the disaggregation statistics: now the engine disaggregates only on
    a single realization (default: the closest to the mean)
  * Reduced the data transfer when computing the hazard curves
  * Optimized the reading of large CSV exposures
  * Fixed the --hc functionality across users
  * Optimized the reduction of the site collection on the exposure sites
  * Made more robust the gsim logic tree parser: lines like
    `<uncertaintyModel gmpe_table="../gm_tables/Woffshore_low_clC.hdf5">`
    are accepted again
  * Added a check against duplicated values in nodal plane distributions and
    hypocenter depth distributions
  * Changed the support for zipped exposures and source models: now the
    name of the archive must be written explicitly in the job.ini
  * Added support for numpy 1.16.3, scipy 1.3.0, h5py 2.9.0
  * Removed the special case for event_based_risk running two calculations

  [Graeme Weatherill]
  * Adds the Tromans et al. (2019) adjustable GMPE for application to PSHA
    in the UK

  [Michele Simionato]
  * Optimized src.sample_ruptures for (multi)point sources and are sources
  * Fixed a mutability bug in the DistancesContext and made all context
    arrays read-only: the fix may affect calculations using the GMPEs
    berge_thierry_2003, cauzzi_faccioli_2008 and zhao_2006;
  * Fixed a bug with the minimum_distance feature
  * Fixed a bug in the exporter of the aggregate loss curves: now the loss
    ratios are computed correctly even in presence of occupants
  * Removed the (long time deprecated) capability to read hazard curves and
    ground motion fields from XML files: you must use CSV files instead

  [Marco Pagani]
  * Implemented a modified GMPE that add between and within std to GMPEs only
    supporting total std

  [Michele Simionato]
  * Added the ability to use a taxonomy_mapping.csv file
  * Fixed a bug in classical_damage from CSV: for hazard intensity measure